@@ -6,6 +6,10 @@
 	(populate_feed_viewer): Only show a link to the "item" if we have
 	an item link.
 
+	* static/js/oneoffcast/user.js
+	(do_remove_feed): Initiate the calls to remove the feed from the
+	list of subsccriptions for the user.
+
 	* static/css/site.css (sidebar_r): Change float to right and
 	increase the width to 24% to take up more of the available space.
 
